new flexible dialog box works
Signed-off-by: moler.chris@gmail.com <moler.chris@gmail.com>

--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,7 @@
 [Credentials]
 username = cmoler@comact.com
 
-[List]
-sites0 = https://www.tutorialspoint.com/increment-and-decrement-operators-in-python
-sites1 = https://www.huffpost.com/topic/tweets-of-the-week
-sites2 = https://stackoverflow.com/questions/29497391/creating-a-tkinter-class-and-waiting-for-a-return-value
-sites3 = https://stackoverflow.com/questions/29497391/creating-a-tkinter-class-and-waiting-for-a-return-value
-sites4 = http://192.168.136.2:5000/webman/3rdparty/SurveillanceStation/
-sites5 = https://messages.google.com/web/conversations?mode=add-people
+[Site0]
+description = Lauzon
+address = https://comact2.sharepoint.com/sites/Project-21-1195
 
